# nix-minecraft-plugin-upgrade

./: Cargo.toml  README.md  build.nix  flake.nix
.github/: test.yml
.github/workflows/: test.yml
src/: main.rs  modrinth.rs
