[package]
name = "nix-minecraft-plugin-upgrade"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/BatteredBunny/nix-minecraft-plugin-upgrade"
description = "Basic program that generates list of plugin versions that can be used with nix-minecraft"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
