[package]
name = "nix-minecraft-plugin-upgrade"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/BatteredBunny/nix-minecraft-plugin-upgrade"
description = "Basic program that generates list of plugin versions that can be used with nix-minecraft"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
itertools = "0.14.0"
